--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.a8favdy.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=random
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=random
+REFRESH_TOKEN_EXPIRY=10d
