--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET=random
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=random
 REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME=ddwpibpzj
+CLOUDINARY_API_KEY=***********
+CLOUDINARY_API_SECRET=******************************
